--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Endless-Slider</title>
     <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" href="style1.css">
+    <link rel="shortcut icon" href="images/fav-icon.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
